# Avocado

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  avocado.sql  requirements.txt
src/: app.py  avocado-operator  avocado-operator-cli  avocado-operator-gui  avocado-server
src/avocado/src/: implantpb.proto
src/certs/: README.md  certs.py  mkcerts.sh
src/certs/client/: avocado-implant.c2-client-key.pem  avocado-implant.c2-client.pem  rootCA-key.pem  rootCA.pem
src/certs/db/: database_v2.py
src/certs/server/: avocado-server.c2-key.pem  avocado-server.c2.pem  rootCA-key.pem  rootCA.pem
src/client/: README.md
src/client/certs/: certs.py
src/client/generate/: generate.py
src/client/gui/: active_session_logic.py  connect_screen_logic.py  event_viewer_logic.py  generate_screen_logic.py  remote_machines_logic.py
src/client/listener/: listener.py
src/client/pb/: implantpb_pb2.py  operatorpb_pb2.py
src/client/proto/: README.md
src/client/rpc_client/: rpc_client.py
src/client/util/: util.py
src/db/: README.md  clean.sh  make_db.py  make_directories.sh  schema.py  test.txt  test_db
src/db/postgres/: README.md  make_db.py  make_directories.sh
src/db/sqlite/: README.md  make_db.py  test_db
src/generate/: generate.py
src/implant/: Cargo.toml  README.md  build.rs
src/implant-test/: README.md  main.py
src/implant/src/: implantpb.proto  main.rs
src/implant/src/embed/: mod.rs
src/implant/src/handler/: handler.rs  mod.rs
src/implant/src/mtls/: client.rs  config.rs  mod.rs  server.rs
src/implant/src/tasks/: exec.rs  info.rs  mod.rs  registration.rs  tasks.rs
src/implant/src/tasks/registration/: mod.rs  registration.rs
src/operator/: Avocado  Avocado_CLI  README.md  cli_client.py  client.py  gui_client.py  gui_operator.py  main.py
src/operator/generate/: generate.py
src/operator/gui/: active_session_logic.py  connect_screen_logic.py  event_viewer_logic.py  generate_screen_logic.py  remote_machines_logic.py
src/operator/listener/: listener.py
src/proto/: README.md
src/server/: Command Log.txt  README.md  active_session.py  active_session_logic.py  app.py  client.py  connect_screen.py  gui_client.py  implant  main.py  main_window.py  mtls.py
(+45 files in other folders)
