[package]
name = "implant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Some cool tricks from https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Make sure the binary is static
# Comment this out when debugging
[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "target-feature=+crt-static"
]

[target.x86_64-pc-windows-gnu]
rustflags = [
  "-C", "target-feature=+crt-static"
]

[dependencies]
anyhow = "1.0.70"
mio = { version = "0.8.6", features = ["os-poll", "net"] }
prost = "0.11.8"
rust-embed = { version = "6.6.0", features = ["interpolate-folder-path", "compression"] }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
sysinfo = "0.28.3"
whoami = "1.4.0"

[target.x86_64-unknown-linux-musl.dependencies]
users = "0.11.0"

[build-dependencies]
prost-build = "0.11.8"
